# KNN-with-server-clients

./: .~lock.ss.csv#  CLI.cpp  CLI.h  CMakeLists.txt  Classify.cpp  Classify.h  Command.cpp  Command.h  Data.cpp  Data.h  DefaultIO.cpp  DefaultIO.h  Distance.cpp  Distance.h  Download.cpp  Download.h  File.cpp  File.h  MaxHeap.cpp  MaxHeap.h  README.md  Results.cpp  Results.h  Setting.cpp  Setting.h  SocketIO.cpp  SocketIO.h  UploadFile.cpp  UploadFile.h  a.out  beans_Classified.csv  client.cpp  client.out  makefile  p.csv  server.cpp  server.out  t.csv  test.csv  train.csv  (+1 more)
